kubernetes-networks/canary/prod-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lb-ingress.local
    http:
      paths:
      - path: /web
        backend:
          serviceName: prod
          servicePort: 8000
